--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
             android:layout_marginRight="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/friendsList_recyclerview_mainActivity"
             android:layout_marginBottom="16dp" android:id="@+id/floatingActionMenu2">
+
         <com.github.clans.fab.FloatingActionButton
                 android:id="@+id/search_fab_mainActivity"
                 android:layout_width="wrap_content"
@@ -73,6 +74,7 @@
                 app:fab_colorPressed="#FAE5D3"
                 fab:fab_size="mini"
                 fab:fab_label="로그아웃"/>
+
     </com.github.clans.fab.FloatingActionMenu>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -83,5 +85,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/friendsList_recyclerview_mainActivity"
-            app:layout_constraintTop_toBottomOf="@+id/shadow_mainActivity"/>
+            app:layout_constraintTop_toBottomOf="@+id/shadow_mainActivity" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
