--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,20 +6,42 @@
         xmlns:fbutton="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LoginActivity">
+        tools:context=".LoginActivity"
+        android:background="#2E313A">
+
+    <ImageView
+            android:src="@drawable/messenger_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp"
+            android:id="@+id/imageView"/>
+    <TextView
+            android:text="다크모드 채팅앱"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColor="#fff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="@+id/imageView" app:layout_constraintTop_toBottomOf="@+id/imageView"
+            android:layout_marginTop="16dp"/>
 
     <Button
             android:id="@+id/emailLogin_btn_login"
+            android:background="@drawable/chat_edittext_style"
+            android:textColor="#fff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="이메일로 시작하기"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="32dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,30 +51,35 @@
             android:id="@+id/googleLogin_btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/chat_edittext_style"
+            android:textColor="#fff"
             android:text="구글로 시작하기"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/emailLogin_btn_login"
             app:layout_constraintStart_toStartOf="@+id/emailLogin_btn_login"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/emailLogin_btn_login"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginEnd="32dp"/>
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginEnd="50dp"/>
 
     <Button
             android:id="@+id/facebookLogin_btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/chat_edittext_style"
+            android:textColor="#fff"
             android:text="페이스북으로 시작하기"
             android:textStyle="bold"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/googleLogin_btn_login"
             app:layout_constraintEnd_toEndOf="@+id/googleLogin_btn_login"
             app:layout_constraintStart_toStartOf="@+id/googleLogin_btn_login"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginEnd="32dp"/>
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginEnd="50dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
