--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -8,6 +8,17 @@
         android:background="#2E313A"
         tools:context=".ChatActivity">
 
+    <ProgressBar
+            android:id="@+id/progress_bar_chatActivity"
+            android:elevation="100dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/constraintLayout" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/shadow_chatActivity"/>
+
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_chatActivity"
             android:layout_width="match_parent"
@@ -45,6 +56,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:elevation="30dp"
             android:background="#2E313A"
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/constraintLayout"
@@ -119,8 +131,8 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="0dp"
-            android:background="@drawable/gradation_style"
-            android:layout_height="1dp"
+            android:background="@drawable/shadow"
+            android:layout_height="3dp"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
             android:id="@+id/makeShadow_linearLayout_chatActivity"
             app:layout_constraintStart_toStartOf="@+id/chats_recyclerview_chatActivity"
