--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -11,30 +11,10 @@
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/profileImage_app_bar_mypageActivity"
             android:fitsSystemWindows="true"
-            android:layout_height="@dimen/app_bar_height"
+            android:layout_height="300dp"
             android:layout_width="match_parent"
             android:theme="@style/AppTheme.AppBarOverlay">
-        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-                                                           android:layout_height="match_parent">
-            <ImageView
-                    android:id="@+id/backgroundProfileImage_imaegview_myPageActivity"
-                    android:scaleType="centerCrop"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-            <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center"
-                    android:scaleType="centerCrop"
-                    app:layout_constraintEnd_toEndOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
-                    app:layout_constraintTop_toTopOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
-                    android:id="@+id/centerProfileImage_imageview_myPageActivity"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
@@ -49,21 +29,43 @@
                     android:id="@+id/toolbar"
                     android:layout_height="?attr/actionBarSize"
                     android:layout_width="match_parent"
-                    app:layout_collapseMode="pin"
+                    app:layout_collapseMode="parallax"
                     app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <ImageView
+                        android:id="@+id/backgroundProfileImage_imaegview_myPageActivity"
+                        android:scaleType="centerCrop"
+                        android:alpha="0.3"
+                        android:background="@drawable/image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintVertical_bias="0.0"/>
+                <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/users"
+                        app:civ_border_width="1dp"
+                        app:civ_border_color="@color/colorAccent"
+                        android:transitionName="profile_transition"
+                        android:scaleType="centerCrop"
+                        app:layout_constraintEnd_toEndOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
+                        app:layout_constraintTop_toTopOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
+                        android:id="@+id/centerProfileImage_imageview_myPageActivity"
+                        android:layout_marginBottom="8dp"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_my_page"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            app:layout_anchor="@id/profileImage_app_bar_mypageActivity"
-            app:layout_anchorGravity="bottom|end"
-            app:srcCompat="@android:drawable/ic_dialog_email"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
