--- a/app/src/main/res/layout/message_layout_left.xml
+++ b/app/src/main/res/layout/message_layout_left.xml
@@ -35,6 +35,7 @@
                 android:layout_margin="10dp"
                 android:visibility="gone"
                 android:scaleType="centerCrop"
+                android:transitionName="chatImage_transition"
                 android:id="@+id/chatLog_imageview_left"/>
     </androidx.cardview.widget.CardView>
     <TextView
