--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -1,71 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
+        android:background="@color/colorPrimary"
         tools:context=".MyPageActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/profileImage_app_bar_mypageActivity"
-            android:fitsSystemWindows="true"
-            android:layout_height="300dp"
+
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_myPage"
             android:layout_width="match_parent"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"></androidx.appcompat.widget.Toolbar>
 
+    <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:id="@+id/guideline3"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.6"/>
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/toolbar_layout"
-                android:fitsSystemWindows="true"
+    <ImageView
+            android:id="@+id/backgroundProfileImage_imaegview_myPageActivity"
+            android:scaleType="centerCrop"
+            android:alpha="0.3"
+            android:background="@drawable/image"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_myPage"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:elevation="100dp"
+            android:layout_gravity="center"
+            app:layout_collapseMode="parallax"
+            android:src="@drawable/users"
+            app:civ_border_width="1dp"
+            app:civ_border_color="@color/colorAccent"
+            android:transitionName="profile_transition"
+            android:scaleType="centerCrop"
+            android:id="@+id/centerProfileImage_imageview_myPageActivity"
+            app:layout_constraintBottom_toBottomOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
+            app:layout_constraintTop_toBottomOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+    />
+    <TextView
+            android:text="유저 이름"
+            android:textSize="20sp"
+            android:textColor="#fff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/profileName_textview_myPage"
+            app:layout_constraintEnd_toEndOf="@+id/centerProfileImage_imageview_myPageActivity"
+            app:layout_constraintStart_toStartOf="@+id/centerProfileImage_imageview_myPageActivity"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/centerProfileImage_imageview_myPageActivity"/>
+    <TextView
+            android:text="유저이메일@naver.com"
+            android:textSize="13sp"
+            android:textColor="#fff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/profileEmail_textview_myPage"
+            app:layout_constraintEnd_toEndOf="@+id/profileName_textview_myPage"
+            app:layout_constraintStart_toStartOf="@+id/profileName_textview_myPage" android:layout_marginBottom="24dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/profileName_textview_myPage"/>
+    <androidx.core.widget.NestedScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profileEmail_textview_myPage" android:layout_marginTop="16dp">
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:toolbarId="@+id/toolbar"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:contentScrim="?attr/colorPrimary">
-
-            <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_height="?attr/actionBarSize"
+                android:orientation="vertical">
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/bio_cardview_myPage"
                     android:layout_width="match_parent"
-                    app:layout_collapseMode="parallax"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                <ImageView
-                        android:id="@+id/backgroundProfileImage_imaegview_myPageActivity"
-                        android:scaleType="centerCrop"
-                        android:alpha="0.3"
-                        android:background="@drawable/image"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="10dp">
+                <TextView
+                        android:id="@+id/bio_textview_myPage"
+                        android:textSize="15sp"
+                        android:layout_margin="20dp"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintVertical_bias="0.0"/>
-                <de.hdodenhof.circleimageview.CircleImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
                         android:layout_gravity="center"
-                        android:src="@drawable/users"
-                        app:civ_border_width="1dp"
-                        app:civ_border_color="@color/colorAccent"
-                        android:transitionName="profile_transition"
-                        android:scaleType="centerCrop"
-                        app:layout_constraintEnd_toEndOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toBottomOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
-                        app:layout_constraintTop_toTopOf="@+id/backgroundProfileImage_imaegview_myPageActivity"
-                        android:id="@+id/centerProfileImage_imageview_myPageActivity"
-                        android:layout_marginBottom="8dp"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                        android:text="내 자기소개를 쓰는 곳입니다.하하하하하하핳하하하하ㅏㅎ하하하하ㅏ하하하"/>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="10dp">
+                <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/lottie1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        app:lottie_autoPlay="true"/>
+            </androidx.cardview.widget.CardView>
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+            <androidx.cardview.widget.CardView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="10dp">
+                <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/lottie2"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        app:lottie_autoPlay="true"/>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="10dp">
+                <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/lottie3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        app:lottie_autoPlay="true"/>
+            </androidx.cardview.widget.CardView>
 
-    <include layout="@layout/content_my_page"/>
+        </LinearLayout>
 
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
